--- a/templates/emails/password_reset.html
+++ b/templates/emails/password_reset.html
@@ -63,10 +63,10 @@
             </div>
             <p>This link is valid for the next 10 minutes. Please do not share this link with anyone.<br/>
             If you did not request this code, please ignore this email or contact our support team.</p>
-            <p>Best regards,<br>Securenex</p>
+            <p>Best regards,<br>Dairy Farmers</p>
         </div>
         <div class="footer">
-            &copy; 2024 Securenex. All rights reserved.
+            &copy; 2025 Dairy Farmers. All rights reserved.
         </div>
     </div>
 </body>
